k8s-manifest.yaml
---
# ==========================================
# BACKEND DEPLOYMENT & SERVICE
# ==========================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anime-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: anime-backend
  template:
    metadata:
      labels:
        app: anime-backend
    spec:
      containers:
      - name: backend
        image: arpusauri/anime-backend:latest # Ganti dengan username DockerHub kamu
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  type: ClusterIP
  selector:
    app: anime-backend
  ports:
  - port: 5000
    targetPort: 5000

---
# ==========================================
# FRONTEND DEPLOYMENT & SERVICE
# ==========================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anime-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: anime-frontend
  template:
    metadata:
      labels:
        app: anime-frontend
    spec:
      containers:
      - name: frontend
        image: arpusauri/anime-frontend:latest # Ganti dengan username DockerHub kamu
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  type: ClusterIP
  selector:
    app: anime-frontend
  ports:
  - port: 80
    targetPort: 80

---
# ==========================================
# INGRESS CONTROLLER
# ==========================================
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: anime-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    # Nginx otomatis meneruskan /api ke backend tanpa memotong prefix,
    # sesuai dengan backend Python yang me-listen route /api/info
spec:
  rules:
  - http:
      paths:
      # Prioritaskan path yang lebih spesifik (/api) di atas (/)
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-svc
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port:
              number: 80
